my redux essential app

--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "redux-essentials-example",
-  "version": "1.0.0",
+  "name": "redux-essential-app",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mswjs/data": "^0.8.4",
-    "@reduxjs/toolkit": "^1.6.1",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
+    "@fakerjs/faker": "^3.0.0",
+    "@mswjs/data": "^0.13.0",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "classnames": "^2.2.6",
-    "date-fns": "^2.12.0",
-    "faker": "^4.1.0",
-    "miragejs": "^0.1.35",
-    "mock-socket": "^9.0.3",
-    "msw": "^0.36.3",
-    "react": "^17",
-    "react-dom": "^17",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^4",
+    "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
+    "miragejs": "^0.1.47",
+    "mock-socket": "^9.2.1",
+    "mws": "^2.0.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.1",
+    "react-scripts": "5.0.1",
     "seedrandom": "^3.0.5",
-    "txtgen": "^2.2.4"
+    "txtgen": "^3.0.6",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,7 +30,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -44,7 +48,7 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^2.0.2"
+    "msw": "^1.2.2"
   },
   "msw": {
     "workerDirectory": "public"
